--- a/accounts.yml
+++ b/accounts.yml
@@ -1,7 +1,7 @@
 build:
   version: "3.0"
 accounts:
-  message: "Welcome to EazyBank accounts related local docker APIs"
+  message: "Welcome to EazyBank accounts related local changed APIs"
   contactDetails:
     name: "John Doe - Developer"
     email: "john@eazybank.com"
